# pact

./: .gitignore  COMPOSIO_INTEGRATION.md  README.md  SECURITY_NOTES.md  example.js  notbob-policy.committed.json  notbob-policy.json  package-lock.json  package.json  pact-cli.py  pact-workflow-demo.py  pyproject.toml  test-full-stack.js  test-local.js  validate-interceptor.js  validate-v02.js
.github/workflows/: release.yml  test.yml
docs/: DRP-integration.md  PACT-v0.4-stdio-interceptor.md  syscall-tracer-spec.md
examples/: bilateral-accountability.js
python/: demo.py  notbob_pact.py  pact-mcp-interceptor.py  setup.py  upgrade_receipts.py
python/pact/: __init__.py  aip_adapter.py  bilateral_receipt.py  causal_binding.py  collector.py  commitment.py  drp_adapter.py  erc8126_binding.py  fhe_receipt.py  hjs_adapter.py  hrt_bridge.py  integration_test.py  ovid_bridge.py  pact_mcp_interceptor.py  policy_spec.py  policy_versioning.py  receipt.py  receipt_generator.py  test_drp_adapter.py  transparency.py  zk_host.py  zk_receipt_generator.py
python/tests/: test_bundle.py  test_causal_binding.py  test_pact.py  (+6 more)
receipts/: b9e1b63d-b190-44ee-918a-729e0a5f70ea.json  b9e1b63d-b190-44ee-918a-729e0a5f70ea.json.bak  c6a4abb5-2ff1-497a-b080-1b60eb7e5819.json
rust/: setup-risc0.sh
scripts/: README.md  verify_upgraded.py
src/: commitment.js  index.js  interceptor-stdio.js  interceptor.js  log_client.js  policy.js  receipt.js  verifier.js  verify-pact.js  verify_receipt.js  zk-receipt.js  zk_host.js  zk_prover.js
test/: test-bilateral-accountability.js  test-stack.js
(+16 files in other folders)
